--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,10 @@
 #container a {
   text-decoration: none;
 }
+
+ion-card-title{
+  margin-top: 5%;
+  margin-left:20px;
+  margin-bottom: 0;
+} 
+
