--- a/src/app/core/component/modal/modal.page.html
+++ b/src/app/core/component/modal/modal.page.html
@@ -7,18 +7,39 @@
   <ion-content>
     <ion-list>
       <ion-item>
-        <ion-input type="text" placeholder="Nombre"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input type="date" placeholder="Fecha"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input type="number" placeholder="Puntaje:"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-select placeholder="Categoria">
-          <ion-select-option *ngFor="let t of type">{{t.name}}</ion-select-option>
+        <ion-select placeholder="Media" [(ngModel)]="media">
+          <ion-select-option>Peliculas</ion-select-option>
+          <ion-select-option>Series</ion-select-option>
+          <ion-select-option>Anime</ion-select-option>
+          <ion-select-option>Libros</ion-select-option>
+          <ion-select-option>Juegos</ion-select-option>
         </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-input type="text" placeholder="Nombre" [(ngModel)]="name"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input type="date" placeholder="Fecha" [(ngModel)]="date"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input type="number" placeholder="Puntaje:" [(ngModel)]="score"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-select placeholder="Categoria" [(ngModel)]="typeM">
+          <ion-select-option value="{{t.idType}}" *ngFor="let t of type">{{t.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="media === 'Juegos'">
+        <ion-input type="number" placeholder="Horas:" [(ngModel)]="hours"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="media === 'Libros'">
+        <ion-input type="number" placeholder="Paginas:" [(ngModel)]="pages"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="media === 'Anime' || media === 'Series'">
+        <ion-input type="number" placeholder="Temporadas:" [(ngModel)]="temp"></ion-input>
+      </ion-item>
+      <ion-item >
+        <ion-button (click)="register()"> Registrar </ion-button>
       </ion-item>
     </ion-list>
   </ion-content>
