--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -37,18 +37,18 @@ ion-avatar {
 }
 
 ion-fab-button::part(native) {
-  background-color: rgb(176, 175, 175);
+  background-color: rgb(255, 255, 255);
   border-radius: 15px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
   color: black;
 }
 
 ion-fab-button::part(native):hover::after {
-  background-color: rgb(176, 175, 175);;
+  background-color: #ffffff;;
 }
 
 ion-fab-button::part(native):active::after {
-  background-color: rgb(176, 175, 175);;
+  background-color: rgb(255, 255, 255);;
 }
 
 .block {
@@ -102,4 +102,14 @@ ion-segment-button {
 
 ion-segment.segment-scrollable::-webkit-scrollbar {
   display: none; /* Ocultar la barra de desplazamiento en navegadores basados en WebKit (Chrome, Safari, etc.) */
+}
+
+.ion-padding{
+  --background: #1A2936;
+}
+
+.filtros{
+  margin-left: 5%;
+  --background: none;
+  width: 90%;
 }
