--- a/src/app/core/component/modal/modal.page.html
+++ b/src/app/core/component/modal/modal.page.html
@@ -1,6 +1,15 @@
 <head>
   <title>Ejemplo de CSS en el mismo HTML</title>
   <style>
+
+    ion-content{
+      --background: linear-gradient(to right, #2c4c67, #505e6a);
+    }
+
+    ion-list{
+      background: linear-gradient(to right, #2c4c67, #505e6a);
+    }
+
  .rating {
   font-size: 30px;
 }
