--- a/src/app/core/component/modal/modal.page.html
+++ b/src/app/core/component/modal/modal.page.html
@@ -3,11 +3,11 @@
   <style>
 
     ion-content{
-      --background: linear-gradient(to right, #2c4c67, #505e6a);
+      --background: linear-gradient(to right, #000, #334e65);
     }
 
     ion-list{
-      background: linear-gradient(to right, #2c4c67, #505e6a);
+      background: linear-gradient(to right, #000, #334e65);
     }
 
  .rating {
