--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -113,3 +113,7 @@ ion-segment.segment-scrollable::-webkit-scrollbar {
   --background: none;
   width: 90%;
 }
+
+.labelFiltros{
+  color: rgb(199, 195, 195);
+}
