--- a/src/app/core/component/alerta/alerta.component.html
+++ b/src/app/core/component/alerta/alerta.component.html
@@ -1,18 +1,33 @@
-<div class="modal"  id="modal-notificar">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title">Notificación</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              {{mensaje}}
-            </div>
-            <div class="modal-footer">
-               <button type="button" class="btn cancel" data-dismiss="modal">Cancelar</button>
-            </div>
-      </div>
-  </div>
-</div>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="closeModal()">Cancel</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+    <ion-card-header>
+      <ion-card-title>
+        <ion-icon name="reorder-four-outline"></ion-icon> {{this.title}}
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          Categoria: {{this.category}}
+        </ion-item>
+        <ion-item *ngIf="this.message != ''">
+          {{this.message}}
+        </ion-item>
+      <ion-item>
+        <ion-button (click)="deleteMedia()" expand="block" fill="outline">
+          Eliminar
+        </ion-button>
+      </ion-item>
+    </ion-list>
+
+    </ion-card-content>
+</ion-content>
+
