--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -117,3 +117,9 @@ ion-segment.segment-scrollable::-webkit-scrollbar {
 .labelFiltros{
   color: rgb(199, 195, 195);
 }
+
+.my-modal {
+  //width: 50%;
+  --background: red;
+  /* Establecer el ancho al 50% */
+}
